Total value per period implemeted